[refs #97529] Meeting register: update text for cancel link and fix align.

--- a/land/copernicus/content/browser/static/meeting/register.css
+++ b/land/copernicus/content/browser/static/meeting/register.css
@@ -129,4 +129,5 @@ div.login .register-form div.buttons {
 
 div.back-to-meeting {
   width: 100%;
+  text-align: center;
 }
